sample-2/Dev_Gateway_VS.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dev-gateway
spec:
  selector:
    istio: dev-ingressgateway
  servers:
    - port:
        number: 80
        name: http-80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yelb-ui
spec:
  hosts:
    - "*"
  gateways:
    - dev-gateway
  http:
    - route:
        - destination:
            host: yelb-ui
            port:
              number: 8082
      match:
        - uri:
            prefix: /

---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  outboundTrafficPolicy:
    mode: ALLOW_ANY
