sample-2/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:886436932322:certificate/c9350a7a-d5e2-4e33-8d9d-5d8c6261bedd"
    alb.ingress.kubernetes.io/description: 'alb ingress controller'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready   # 상태 확인 경로
    alb.ingress.kubernetes.io/healthcheck-port: "15021"     # 상태 확인 포트
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
  - host: devdev.secondfit.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dev-ingressgateway
              port:
                number: 80
  - host: prod.secondfit.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prod-ingressgateway
              port:
                number: 80
